Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
- Added an example file for *nix (Linux/Unix) .zope-external-edit to use with
  Zope External Editor.
Bug fixes
~~~~~~~~~
- #1871: "Search highlighting does not work anymore".
- Removed cpsinstall.py which is now totally out of date and thus useless.
- French spelling for metadata.
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 