@@ -19,6 +19,7 @@
   <property name="translated">True</property>
   <property name="sorted">True</property>
   <property name="size">5</property>
+  <property name="css_class">subjects</property>
  </widget>
  <widget name="publication_date" meta_type="DateTime Widget">
   <property name="fields">
@@ -29,9 +30,7 @@
      name="label_edit">cpsdoc_NewsItem_label_publication_date</property>
   <property name="is_i18n">True</property>
   <property name="readonly_layout_modes"/>
-  <property name="hidden_layout_modes">
-   <element value="view"/>
-  </property>
+  <property name="hidden_layout_modes"/>
   <property name="hidden_readonly_layout_modes"/>
   <property name="css_class">publicationDate</property>
  </widget>
